# Z-writer

./: .gitignore  AGENT_EVOLVE_LOG.md  AGENT_MEMORY.md  CLAUDE.md  docker-compose.yml  e2e-world.json  start.bat  status.bat  stop.bat  test-character.json  test-plot.json  test-polish.json  test-strategy.json  test-writing.json
.claude/: settings.json
rust-cli/: .dashscope_key.example  .gitignore  CLI_TUTORIAL.md  Cargo.toml  README.md  scan_report.md
rust-cli/src/: config.rs  error.rs  git.rs  lib.rs  main.rs  workspace.rs
rust-cli/src/agents/: base.rs  character.rs  compliance.rs  controller.rs  mod.rs  plot.rs  polish.rs  world_outline.rs  writing.rs
rust-cli/src/cli/: mod.rs
rust-cli/src/context/: character_tracker.rs  context_manager.rs  mod.rs  rolling_summary.rs  token_optimizer.rs
rust-cli/src/llm/: mod.rs
rust-cli/src/rag/: l1_markdown.rs  l2_memory_tree.rs  l3_material_store.rs  mod.rs
rust-cli/src/wiki/: mod.rs
rust-cli/src/workflows/: create_novel.rs  fix_writer_block.rs  mod.rs
rust-cli/test_wiki_enhanced_ThreadId(2)_8/entities/: 北京中关村.md  萧炎.md
rust-cli/test_wiki_enhanced_ThreadId(2)_8/genres/: shangzhan.md
rust-cli/test_wiki_enhanced_ThreadId(2)_8/rules/: writing_rules.md
rust-cli/test_wiki_enhanced_ThreadId(2)_8/templates/: polish.md  writing.md
rust-cli/tests/: character_tracker_test.rs  context_manager_test.rs  dashscope_test.rs  e2e_test.rs  git_test.rs  integration_test.rs  l2_memory_tree_test.rs  l3_material_store_test.rs  llm_test.rs  rolling_summary_test.rs  token_optimizer_test.rs  wiki_enhanced_test.rs  wiki_test.rs
(+248 files in other folders)
