[package]
name = "zwriter-cli"
version = "0.1.0"
edition = "2021"

[profile.release]
# 启用 LTO（Link Time Optimization）
lto = true
# 优化二进制大小
opt-level = "z"  # Optimize for size
# 移除调试符号
strip = true
# 单代码gen单元
codegen-units = 1
# 启用 panic = abort 减小二进制
panic = "abort"

[dependencies]
# CLI 框架
clap = { version = "4.5", features = ["derive"] }
rustyline = "14.0"

# 异步运行时
tokio = { version = "1.42", features = ["full"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 终端彩色输出
colored = "2.1"

# 异步 trait
async-trait = "0.1"

# 流式响应处理
futures = "0.3"

# Git 版本管理
# 当前使用系统 git 二进制，未来可集成 gix 纯 Rust 实现
# gix = { version = "0.71", default-features = false, features = ["blocking-network-client"] }

[dev-dependencies]
tempfile = "3.10"
